update opeanpi
