# docs/openapi/gen/openapi.yaml
@@ -166,13 +166,14 @@ components:
     newPage:
       type: object
       required:
-        - path
+        - parentID
         - title
         - body
+        - creator
       properties:
-        path:
-          type: string
-          example: /path/to/page
+        parentID:
+          type: integer
+          example: 1
         title:
           type: string
           example: title
@@ -186,7 +187,7 @@ components:
       type: object
       required:
         - id
-        - path
+        - parentID
         - title
         - body
         - creator
@@ -194,9 +195,9 @@ components:
         id:
           type: integer
           example: 1
-        path:
-          type: string
-          example: /path/to/page
+        parentID:
+          type: integer
+          example: 1
         title:
           type: string
           example: title
